# xbrlld

./: .gitignore  LICENCE  README.md  pyproject.toml
src/xbrlld/: __init__.py  cli.py  converter.py  instance.py  taxonomy.py
tests/: test_cli.py  test_instance.py  test_taxonomy.py
tests/data/instance/: 04958719_aa_2025-07-07.xhtml  Prod223_4025_13819021_20241231.html
